--- a/WeApp/pages/profile/index.wxss
+++ b/WeApp/pages/profile/index.wxss
@@ -121,3 +121,18 @@
 .van-button {
   margin-bottom: 12rpx;
 }
+.login-title  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 42rpx;
+  color:#4CAF50;
+}
+.login-subtitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 22rpx;
+  color:#4CAF50;
+  padding: 20rpx 0 0 0;
+}
