--- a/WeApp/pages/login/index.wxml
+++ b/WeApp/pages/login/index.wxml
@@ -36,15 +36,17 @@
 
     <!-- 登录按钮 -->
     <view class="form-actions">
-      <van-button 
+      <button 
         type="primary" 
         size="large" 
         block
+        round
+        plain
         loading="{{loading}}"
         bindtap="onLogin"
       >
         登录
-      </van-button>
+      </button>
     </view>
 
     <!-- 注册链接 -->
